# isekai_gen

./: .coveragerc  .gitignore  MANIFEST.in  README.txt  data.json  development.ini  production.ini  pyproject.toml  pytest.ini  setup.py  testing.ini
isekai_title_generator/static/: theme.css
isekai_title_generator/templates/: layout.jinja2  mytemplate.jinja2
isekai_title_generator/views/: default.py  notfound.py
tests/: conftest.py  test_views.py
