[tool.poetry]
name = "isekai-gen"
version = "0.1.0"
description = "Isekai Title Generator"
authors = ["Chance Callahan"]
license = "MIT License"
readme = "README.md"
packages = [{include = "isekai_title_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
pyramid = "^2.0"
pyramid-jinja2 = "^2.10"
pyramid-debugtoolbar = "^4.9"
waitress = "^2.1.2"
plaster-pastedeploy = "^1.0.1"

[tool.poetry.group.dev.dependencies]
WebTest = "^3.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
