[tool.poetry]
name = "isekai-title-generator"
version = "0.1.0"
description = "Isekai Title Generator"
authors = ["Chance Callahan"]
license = "MIT License"
readme = "README.md"
packages = [{include = "isekai-title-generator"}]

[tool.poetry.dependencies]
python = "^3.9"
pyramid = "^2.0"
pyramid-jinja2 = "^2.10"
pyramid-debugtoolbar = "^4.9"
waitress = "^2.1.2"
plaster-pastedeploy = "^1.0.1"
isekai-title-generator = {git = "https://github.com/ccallahan/isekai_gen.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
